# duckdb-query-condition-cache

./: .gitignore  CMakeLists.txt  Makefile  README.md  extension_config.cmake  pyproject.toml  vcpkg.json
.github/workflows/: MainDistributionPipeline.yml
benchmark/: README.md  benchmark.sql  benchmark_cache_build.cpp  benchmark_like.sql  benchmark_like_or.sql  run_clickbench_benchmark.py  run_hdfs_log_benchmark.py  run_spark_log_benchmark.py  run_tpch_benchmark.py
src/: cache_invalidation_optimizer.cpp  logical_cache_invalidator.cpp  logical_cache_recorder.cpp  physical_cache_invalidator.cpp  physical_cache_recorder.cpp  predicate_key_utils.cpp  query_condition_cache_extension.cpp  query_condition_cache_filter.cpp  query_condition_cache_functions.cpp  query_condition_cache_optimizer.cpp  query_condition_cache_state.cpp  query_condition_cache_txn_state.cpp
src/include/: cache_invalidation_optimizer.hpp  logical_cache_invalidator.hpp  logical_cache_recorder.hpp  physical_cache_invalidator.hpp  physical_cache_recorder.hpp  predicate_key_utils.hpp  query_condition_cache_extension.hpp  query_condition_cache_filter.hpp  query_condition_cache_functions.hpp  query_condition_cache_optimizer.hpp  query_condition_cache_state.hpp  query_condition_cache_txn_state.hpp
src/include/concurrency/: annotated_lock.hpp  annotated_mutex.hpp  mutex.hpp  thread_annotation.hpp
test/configs/: disable_query_condition_cache.json  enable_query_condition_cache.json  use_query_condition_cache.json
test/sql/: condition_cache_auto.test  condition_cache_build.test  condition_cache_correctness.test  condition_cache_enable_disable.test  condition_cache_incremental.test  condition_cache_info.test  condition_cache_invalidation.test  condition_cache_stats.test
test/unittest/: CMakeLists.txt  test_bitvector.cpp  test_build_cache_entry.cpp  test_cache_invalidation.cpp  test_cache_invalidation_optimizer.cpp  test_cache_store.cpp  test_filter.cpp  test_helpers_invalidation.cpp  test_logical_cache_invalidator.cpp  test_normalize_expression.cpp  test_optimizer_invalidation.cpp  test_physical_cache_invalidator.cpp  test_physical_cache_recorder.cpp
test/unittest/include/: test_helpers_invalidation.hpp
