[project]
name = "duckdb-query-condition-cache"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "black>=24",
    "clang-format==11.0.1",
    "cmake-format>=0.6.13",
    "duckdb==1.5.1",
    "matplotlib>=3.10.8",
    "numpy>=2.4.2",
    "pandas>=3.0.0",
]
